--- a/public/css/lobby_style.css
+++ b/public/css/lobby_style.css
@@ -9,7 +9,6 @@ html {
     overflow: hidden;
 }
 body {
-    position: relative;
     height: 100%;
     background: url('../images/menu-background.jpeg') no-repeat;
     background-size: cover;
@@ -21,7 +20,7 @@ canvas {
 
 .main {
     width: 90vw;
-    height: 90vh;
+    height: 85vh;
     margin: 30px auto;
     background-color: rgba(61, 61, 61, 0.6);
     text-align: center;
@@ -34,7 +33,7 @@ canvas {
 }
 
 img {
-    width: 30vw;
+    width: 30%;
 }
 
 .players-preview__opponent {
@@ -42,11 +41,12 @@ img {
     transform: scaleX(-1);
 }
 
-.ready-button {
-    width: 30vw;
-    height: 10vh;
-    margin: 10vh 0 0 0;
+.countdown {
+    display: none;
     font: 400 50px/54px "Russo One", sans-serif;
+    color: rgba(255, 255, 255, 1);
+    margin: 30px 0 0 0;
+
 }
 
 .awaiting-text {
@@ -69,4 +69,16 @@ img {
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+.previous-page {
+    position: absolute;
+    width: 125px;
+    height: 50px;
+    color: rgba(255, 255, 255, 1);
+    font: 400 16px/20px "Russo One", sans-serif;
+    background-color: rgba(103, 80, 164, 1);
+    border-radius: 25px;
+    left: 20px;
+    bottom: 20px;
 }
