2024-07-20-dev исправил названия стилей. Разделил бек на сервисы.

--- a/templates/first_level.html.twig
+++ b/templates/first_level.html.twig
@@ -19,7 +19,7 @@
   <script src="script/Portal.js"></script>
   <script src="script/level1.js"></script>
   <script src="script/Wall.js"></script>
-  <link rel="stylesheet" href="css/first_level_style.css"/>
+  <link rel="stylesheet" href="css/level_style.css"/>
 </head>
 <body>
   <script src="script/index.js"></script>
