--- a/templates/game_lose.html.twig
+++ b/templates/game_lose.html.twig
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/lose-style.css">
+    <link rel="stylesheet" href="css/lose_style.css">
 </head>
 <body>
 <div class="main">
