--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/menu-style.css">
+  <link rel="stylesheet" href="css/menu_style.css">
 </head>
 <body>
   <h1 class="center-align title">Меню</h1>
