--- a/templates/second_level.html.twig
+++ b/templates/second_level.html.twig
@@ -22,7 +22,7 @@
   <script src="script/Health.js"></script>
   <script src="script/Portal.js"></script>
   <script src="script/level2.js"></script>
-  <link rel="stylesheet" href="css/first_level_style.css"/>
+  <link rel="stylesheet" href="css/level_style.css"/>
 </head>
 <body>
 <script src="script/index.js"></script>
