--- a/templates/third_level.html.twig
+++ b/templates/third_level.html.twig
@@ -13,7 +13,7 @@
   <script src="script/Poison.js"></script>
   <script src="script/Ground.js"></script>
   <script src="script/WoodenPlank.js"></script>
-  <link rel="stylesheet" href="css/level1-style.css"/>
+  <link rel="stylesheet" href="css/level_style.css"/>
 </head>
 <body>
 Здесь будет третий уровень
