pavel-07-18-multiplayer-map закомментил отображение портала в мультиплеере

--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -71,7 +71,7 @@
             hero.restart();
             if (state['state'] === 'start') 
             {
-                //window.location.href = "/win";
+                window.location.href = "/win";
             }  
         }
         state = data['state'];
