--- a/public/css/rating-style.css
+++ b/public/css/rating-style.css
@@ -53,7 +53,10 @@ body {
 .table__third-level {
     width: 30%;
     background-color: rgba(61, 61, 61, 0.8);
+    color: rgba(255, 255, 255, 1);
+    font: 800 16px/20px 'Russo One', sans-serif;
     padding: 10px;
+    text-align: center;
 }
 
 h2 {
@@ -63,15 +66,14 @@ h2 {
 }
 
 h3 {
-    color: rgba(255, 255, 255, 1);
+    display: block;
     font: 800 16px/20px "Russo One", sans-serif;
     margin: 0 0 10px 0;
 }
 
 .table__list {
-    color: rgba(255, 255, 255, 1);
-    margin: 0 0 0 17px;
-    font: 400 16px/20px "Russo One", sans-serif;
+    text-align: left;
+    margin: 0 0 0 25px;
 }
 
 .previous-page {
