misha-07-18-rating-improvements сохранение данных о мультиплеере в бд

--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -91,7 +91,7 @@
         heroView.sprite.scale.x = playerdata['scalex'];
         heroView.hp = playerdata['hp'];
         hero.takeDamage(playerdata['damage']);
-        removeBonusId.push(arrayOfBonus[i]);
+        // removeBonusId.push(arrayOfBonus[i]);
         
         // playerdata['removebonus'].forEach(id => {
         //     for (let i = 0; i < arrayOfBonus.length; i++) {
