--- a/public/css/rating-style.css
+++ b/public/css/rating-style.css
@@ -35,6 +35,10 @@ body {
     padding: 20px;
 }
 
+.table__ratio {
+    float: right;
+}
+
 .table__single {
     width: 55vw;
     height: 85vh;
@@ -74,6 +78,8 @@ h3 {
 .table__list {
     text-align: left;
     margin: 0 0 0 25px;
+    font: 800 16px/20px "Russo One", sans-serif;
+    color: rgba(255, 255, 255, 1);
 }
 
 .previous-page {
