--- a/templates/rating.html.twig
+++ b/templates/rating.html.twig
@@ -12,18 +12,20 @@
 <div class="table">
     <div class="table__multi">
         <h2>Многопользовательский режим</h2>
-        <ol class="table__list">
-            {% set userInTable = false %}
-            {% for user in usersMultiplayer %}
-                {% if user.multiplayerAll != 0 %}
-                    {% set userInTable = true %}
-                    <li> <span>{{ user.username }}:</span> <span class="table__ratio">{{ (user.multiplayerWin / user.multiplayerAll) | number_format(2, '.', '') }}</span> </li>
-                {% endif %}
-            {% endfor %}
-        </ol>
-        {% if not userInTable %}
-            <span class="table__placeholder">Рейтинга пока нет((</span>
-        {% endif %}
+        <div class="table__multi-list">
+            <ol class="table__list">
+                {% set userInTable = false %}
+                {% for user in usersMultiplayer %}
+                    {% if user.multiplayerAll != 0 %}
+                        {% set userInTable = true %}
+                        <li>{{ user.username }}: <span class="table__ratio">{{ (user.multiplayerWin / user.multiplayerAll) | number_format(2, '.', '') }}</span> </li>
+                    {% endif %}
+                {% endfor %}
+            </ol>
+            {% if not userInTable %}
+                <span class="table__placeholder">Рейтинга пока нет((</span>
+            {% endif %}
+        </div>
     </div>
     <div class="table__single">
         <h2>Однопользовательский режим</h2>
@@ -35,7 +37,7 @@
                     {% for user in usersFirstLevel %}
                         {% if user.scoreFirstLevel != 0 %}
                             {% set userInTable = true %}
-                            <li> {{ user.username }}: {{ user.scoreFirstLevel }} </li>
+                            <li> {{ user.username }}: <span class="table__score"> {{ user.scoreFirstLevel }} </span></li>
                         {% endif %}
                     {% endfor %}
                 </ol>
@@ -50,7 +52,7 @@
                     {% for user in usersSecondLevel %}
                         {% if user.scoreSecondLevel != 0 %}
                             {% set userInTable = true %}
-                            <li> {{ user.username }}: {{ user.scoreSecondLevel }} </li>
+                            <li> {{ user.username }}: <span class="table__score"> {{ user.scoreSecondLevel }} </span></li>
                         {% endif %}
                     {% endfor %}
                 </ol>
@@ -65,7 +67,7 @@
                     {% for user in usersThirdLevel %}
                         {% if user.scoreThirdLevel != 0 %}
                             {% set userInTable = true %}
-                            <li> {{ user.username }}: {{ user.scoreThirdLevel }} </li>
+                            <li> {{ user.username }}: <span class="table__score"> {{ user.scoreThirdLevel }} </span></li>
                         {% endif %}
                     {% endfor %}
                 </ol>
