2024-07-20-dev Добавил спавн 2 игрока с другой стороны

--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -103,6 +103,12 @@
         }
         state = data['state'];
     }
+    if ('heropos' in data)
+    {
+        hero.sprite.x = HEROPOS[0];
+        hero.sprite.y = HEROPOS[1];
+        console.log('+')
+    }
     if ('opponentname' in data)
     {
         opponentname = data['opponentname'];
