misha-07-19-images-improvements переместил все картинки в отдельные папки по логике. Поменял везде пути

--- a/public/css/rating_style.css
+++ b/public/css/rating_style.css
@@ -18,7 +18,7 @@ html {
 body {
     position: relative;
     height: 100%;
-    background: url('../images/menu-background.jpeg') no-repeat;
+    background: url('../images/Background/menu_background.jpeg') no-repeat;
     background-size: cover;
 }
 
