--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -33,8 +33,8 @@
 <body>
 <div class="main" id="main">
   <div class="players-preview">
-    <img class="players-preview__player" id="player" src="images/hero.png">
-    <img class="players-preview__opponent" id="opponent"src="images/hero.png">
+    <img class="players-preview__player" id="player" src="images/Hero/hero.png">
+    <img class="players-preview__opponent" id="opponent"src="images/Hero/hero.png">
   </div>
   <div class="countdown" id="countdown">Бой через 5 секунд</div>
   <div id="preloader">
