--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -13,15 +13,15 @@
   <div class="options-list">
     <a class="rating" href="/rating">
       <p class="rating__title">Рейтинг</p>
-      <img src="images/rating_icon.svg">
+      <img src="images/Icon/rating_icon.svg">
     </a>
     <a class="single" href="/choose-level">
       <p class="single__title">Одиночная кампания</p>
-      <img src="images/singleplayer_icon.svg">
+      <img src="images/Icon/singleplayer_icon.svg">
     </a>
     <a class="multi" href="/multiplayer">
       <p class="multi__title">Вдвоём</p>
-      <img src="images/multiplayer_icon.svg">
+      <img src="images/Icon/multiplayer_icon.svg">
     </a>
   </div>
   <a class="signout" type="submit" href="/user/signout">Выйти</a>
