--- a/public/css/choose_level_style.css
+++ b/public/css/choose_level_style.css
@@ -11,7 +11,7 @@ html {
 body {
     position: relative;
     height: 100%;
-    background: url('../images/menu-background.jpeg') no-repeat;
+    background: url('../images/Background/menu_background.jpeg') no-repeat;
     background-size: cover;
 }
 
