--- a/public/css/lobby_style.css
+++ b/public/css/lobby_style.css
@@ -10,7 +10,7 @@ html {
 }
 body {
     height: 100%;
-    background: url('../images/menu-background.jpeg') no-repeat;
+    background: url('../images/Background/menu_background.jpeg') no-repeat;
     background-size: cover;
 }
 
