--- a/public/css/lose_style.css
+++ b/public/css/lose_style.css
@@ -10,7 +10,7 @@ html {
 }
 body {
     height: 100%;
-    background: url('../images/lose-background.png') no-repeat;
+    background: url('../images/Background/lose_background.png') no-repeat;
     background-size: cover;
 }
 
