--- a/public/css/signup_style.css
+++ b/public/css/signup_style.css
@@ -11,9 +11,9 @@ html {
 }
 
 body {
-    cursor: url('../images/cursor.png'), auto;
+    cursor: url('../images/Icon/cursor.png'), auto;
     height: 100%;
-    background: url('../images/signup-background.jpeg') no-repeat;
+    background: url('../images/Background/signup_background.jpeg') no-repeat;
     background-size: cover;
 }
 
