--- a/templates/game_lose.html.twig
+++ b/templates/game_lose.html.twig
@@ -13,11 +13,11 @@
     <h1 class="center-align">Вы мертвы</h1>
     <div class="options-list">
         <a class="options-list__restart" onclick="history.back();">
-            <img src="images/restart_icon.svg" alt="restart">
+            <img src="images/Icon/restart_icon.svg" alt="restart">
             <p class="restart">Повторить</p>
         </a>
         <a class="options-list__continue" href="/choose-level">
-            <img src="images/home_icon.svg" alt="home">
+            <img src="images/Icon/home_icon.svg" alt="home">
             <p class="continue">Выбор уровня</p>
         </a>
     </div>
