--- a/templates/game_win.html.twig
+++ b/templates/game_win.html.twig
@@ -14,17 +14,17 @@
     <div class="options-list">
         <div class="options-list__top">
             <a class="options-list__restart" onclick="history.back();">
-                <img src="images/restart_icon.svg" alt="restart">
+                <img src="images/Icon/restart_icon.svg" alt="restart">
                 <p class="restart">Повторить</p>
             </a>
             <a class="options-list__continue" href="/next-level">
-                <img src="images/continue_icon.svg" alt="continue">
+                <img src="images/Icon/continue_icon.svg" alt="continue">
                 <p class="continue">Продолжить</p>
             </a>
         </div>
         <div class="options-list__bottom">
             <a class="options-list__continue" href="/choose-level">
-                <img src="images/home_icon.svg" alt="home">
+                <img src="images/Icon/home_icon.svg" alt="home">
                 <p class="continue">Выбор уровня</p>
             </a>
         </div>
