--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -145,8 +145,12 @@
             opponentBullets.push(b);
         });
 
+        heroView.activateShield = false;
+        if (playerdata['shield'] === 'true')
+        {
+            heroView.activateShield = true;
+        } 
     }
-    //console.log(data);
   };
 
   function sendMessage(msg)
@@ -184,6 +188,7 @@
         removebonus: removeBonusId,
         damage: opponentDamage, 
         opponentlose: lose,
+        shield: String(hero.activateShield),
     }
     removeBonusId = [];
     ws.send(JSON.stringify({'playerdata': data}))
