2024-07-20-dev Поправлено отображение пуль в мультиплеере

--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -140,7 +140,7 @@
 
         playerdata['opponentbullets'].forEach( bullet =>
         {
-            let b = new Bullet(null, bullet['x'], bullet['y'], 0, 0, bullet['angle']);
+            let b = new Bullet(bullet['x'], bullet['y'], 0, 0, bullet['angle']);
             b.view();
             opponentBullets.push(b);
         });
