--- a/public/css/screensaver_style.css
+++ b/public/css/screensaver_style.css
@@ -19,9 +19,14 @@ body {
     width: 100%;
     height: 261px;
     background-color: rgba(61, 61, 61, 0.6);
-    font: 400 100px/155px "Miltonian Tattoo", sans-serif;
+    /* font: 400 100px/155px "Miltonian Tattoo", sans-serif; */
+    font: 700 190px/155px "Amatic SC", sans-serif;
+    text-shadow: 4px -5px 5px red;
     color: rgba(255, 255, 255, 1);
     margin: 10% 0 0 0;
+    
+    -webkit-animation: blinking 2s linear infinite;
+    animation: blinking 2s linear infinite;
 }
 
 .continue {
@@ -39,3 +44,15 @@ body {
     transform: translateX(-50%);
     margin: 0;
 }
+
+@-webkit-keyframes blinking {
+    0% { color: rgb(255, 255, 255); }
+    50% { color: rgb(255, 190, 190); }
+    100% { color: rgb(255, 255, 255); }
+  }
+
+  @keyframes blinking {
+    0% { color: rgb(255, 255, 255); }
+    50% { color: rgb(255, 190, 190); }
+    100% { color: rgb(255, 255, 255); }
+  }
