misha-07-19-images-improvements исправил отображение мультиплеера

--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -64,7 +64,7 @@
         while (messageQueue.length > 0) {
             ws.send(messageQueue.shift());
         }
-        ws.send(JSON.stringify({'username': username}))
+        setTimeout(() => {ws.send(JSON.stringify({'username': username}))}, 1000)
     };
 
     ws.onerror = function(error) {
