--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -94,6 +94,7 @@
         {
             opponentPreview.style.display = 'none';
             preloader.style.display = 'block';
+            countdown.style.display = 'none';
             hero.restart();
             if (state['state'] === 'start' || state['state'] === 'win')
             {
