--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -36,7 +36,7 @@
     <img class="players-preview__player" id="player" src="images/Hero/hero.png">
     <img class="players-preview__opponent" id="opponent"src="images/Hero/hero.png">
   </div>
-  <div class="countdown" id="countdown">Бой через 5 секунд</div>
+  <div class="countdown" id="countdown"></div>
   <div id="preloader">
     <p class="awaiting-text">Ожидание игрока...</p>
     <div class="loader"></div>
@@ -219,9 +219,9 @@
         opponentPreview.style.display = 'block';
 		preloader.style.display = 'none';
         countdown.style.display = 'block';
-        countdown.innerHTML = `Бой через ${Math.ceil((state['time'] - Date.now() + 4000) / 1000)} секунд`;
+        countdown.innerHTML = `Бой через ${Math.ceil((state['time'] - Date.now() + 5000) / 1000)} секунд`;
     }
-    if (state['state'] === 'ready' && +state['time'] + 4000 <= Date.now())
+    if (state['state'] === 'ready' && +state['time'] + 5000 <= Date.now())
     {
         state['state'] = 'start';
         hero.addShield(5);
