--- a/public/css/signin_style.css
+++ b/public/css/signin_style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .input {
-    margin: 144px 0 0 0;
+    margin: 0 0 0 0;
     background-color: rgba(255, 255, 255, 1);
     border-radius: 1px;
     font: 400 22px/26px "Russo One", sans-serif;
@@ -49,5 +49,10 @@ body {
 .form__text {
     font: 400 22px/26px "Russo One", sans-serif;
     color: rgba(255, 255, 255, 1);
+}
+
+.snackbar {
+    font: 400 14px/16px "Russo One", sans-serif;
+    border-radius: 10px !important;
 }
 
