--- a/public/css/signup_style.css
+++ b/public/css/signup_style.css
@@ -11,7 +11,6 @@ html {
 }
 
 body {
-    cursor: url('../images/Icon/cursor.png'), auto;
     height: 100%;
     background: url('../images/Background/signup_background.jpeg') no-repeat;
     background-size: cover;
@@ -27,7 +26,7 @@ body {
 }
 
 .input {
-    margin: 144px 0 0 0;
+    margin: 0 0 0 0;
     background-color: rgba(255, 255, 255, 1);
     border-radius: 1px;
     font: 400 22px/26px "Russo One", sans-serif;
@@ -55,4 +54,10 @@ body {
     font: 400 22px/26px "Russo One", sans-serif;
     color: rgba(255, 255, 255, 1);
 }
+
+.snackbar {
+    font: 400 14px/16px "Russo One", sans-serif;
+    border-radius: 10px !important;
+}
+
 
