misha-07-22-win-and-lose-for-multiplayer сделал кнопку "Вернуться" в лобби

--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -41,6 +41,7 @@
     <p class="awaiting-text">Ожидание игрока...</p>
     <div class="loader"></div>
   </div>
+  <a class="previous-page" href="/menu">Вернуться</a>
 </div>
 
 
