misha-07-22-rating-style-improvements поменял стили у рейтинга

--- a/public/css/rating_style.css
+++ b/public/css/rating_style.css
@@ -32,6 +32,7 @@ body {
     width: 35vw;
     height: 85vh;
     background-color: rgba(61, 61, 61, 0.6);
+    border-radius: 20px;
     padding: 20px;
 }
 
@@ -43,6 +44,7 @@ body {
     width: 55vw;
     height: 85vh;
     background-color: rgba(61, 61, 61, 0.6);
+    border-radius: 20px;
     padding: 20px;
 }
 
@@ -56,7 +58,8 @@ body {
 .table__second-level,
 .table__third-level {
     width: 30%;
-    background-color: rgba(61, 61, 61, 0.8);
+    border: 2px solid rgba(255, 255, 255, 1);
+    border-radius: 20px;
     color: rgba(255, 255, 255, 1);
     font: 800 16px/20px 'Russo One', sans-serif;
     padding: 10px;
@@ -84,7 +87,11 @@ h3 {
 }
 
 .table__multi-list {
+    height: 90%;
     overflow: auto;
+    border: 2px solid rgba(255, 255, 255, 1);
+    border-radius: 20px;
+    padding: 20px;
 }
 
 .previous-page {
