--- a/templates/rating.html.twig
+++ b/templates/rating.html.twig
@@ -11,7 +11,7 @@
 <body>
 <div class="table">
     <div class="table__multi">
-        <h2>Многопользовательский режим</h2>
+        <h2 class="table__multi-title">Многопользовательский</h2>
         <div class="table__multi-list">
             <ol class="table__list">
                 {% set userInTable = false %}
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="table__single">
-        <h2>Однопользовательский режим</h2>
+        <h2 class="table__single-title">Однопользовательский режим</h2>
         <div class="table__levels">
             <div class="table__first-level">
                 <h3>1 уровень</h3>
