--- a/public/css/win_style.css
+++ b/public/css/win_style.css
@@ -26,7 +26,13 @@ body {
 h1 {
     font: 400 50px/100px "Russo One", sans-serif;
     color: rgba(255, 255, 255, 1);
-    margin: 0 0 20px 0;
+}
+
+.result {
+    font: 400 22px/24px "Russo One", sans-serif;
+    color: rgba(255, 255, 255, 1);
+    text-align: center;
+    margin: 0 0 30px 0;
 }
 
 .options-list__top {
