--- a/templates/choose_level.html.twig
+++ b/templates/choose_level.html.twig
@@ -13,10 +13,26 @@
 <div class="levels-list">
   <a class="level-list__first" href="/first-level">
     <p class="level-list__first-level-title">1 уровень</p>
+    <div class="level-list__result">
+      {% if user.scoreFirstLevel %}
+        <p>Набрано очков: {{ user.scoreFirstLevel }}</p>
+      {% endif %}
+      {% if user.timeFirstLevel %}
+        <p>Пройдено за: {{ user.timeFirstLevel }}с</p>
+      {% endif %}
+    </div>
   </a>
   {% if level >= 2 %}
     <a class="level-list__second" href="/second-level">
       <p class="level-list__second-level-title">2 уровень</p>
+      <div class="level-list__result">
+        {% if user.scoreSecondLevel %}
+          <p>Набрано очков: {{ user.scoreSecondLevel }}</p>
+        {% endif %}
+        {% if user.timeSecondLevel %}
+          <p>Пройдено за: {{ user.timeSecondLevel }}с</p>
+        {% endif %}
+      </div>
     </a>
   {% else %}
     <div class="level-list__second">
@@ -27,6 +43,14 @@
   {% if level >= 3 %}
     <a class="level-list__third" href="/third-level">
       <p class="level-list__third-level-title">3 уровень</p>
+      <div class="level-list__result">
+        {% if user.scoreThirdLevel %}
+          <p>Набрано очков: {{ user.scoreThirdLevel }}</p>
+        {% endif %}
+        {% if user.timeThirdLevel %}
+          <p>Пройдено за: {{ user.timeThirdLevel }}с</p>
+        {% endif %}
+      </div>
     </a>
   {% else %}
     <div class="level-list__third">
